--- a/ahp.html
+++ b/ahp.html
@@ -99,6 +99,7 @@
     <script src="supabase_config.js"></script>
     <script>
         // Cek Login sederhana
+        if (!localStorage.getItem('session_admin')) window.location.href = 'login.html';
         document.getElementById('main-content').classList.remove('hidden');
 
         document.getElementById('formAHP').addEventListener('submit', async function(e) {
@@ -168,7 +169,10 @@
             }
         });
 
-        async function logout() { window.location.href = 'login.html'; }
+        async function logout() { 
+            localStorage.removeItem('session_admin');
+            window.location.href = 'login.html'; 
+        }
     </script>
 </body>
 </html>
