--- a/dashboard.html
+++ b/dashboard.html
@@ -8,9 +8,11 @@
 </head>
 <body class="bg-gray-50 font-sans leading-normal tracking-normal hidden" id="main-content">
     <nav class="bg-blue-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
-            <div class="space-x-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+            <div class="mb-4 md:mb-0">
+                <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
+            </div>
+            <div class="flex flex-wrap justify-center gap-4">
                 <a href="data_siswa.html" class="text-blue-100 hover:text-white transition">Kelola Data Siswa</a>
                 <a href="kriteria.html" class="text-blue-100 hover:text-white transition">Kelola Kriteria</a>
                 <a href="ahp.html" class="text-blue-100 hover:text-white transition">Hitung AHP</a>
