--- a/ahp.html
+++ b/ahp.html
@@ -9,9 +9,11 @@
 </head>
 <body class="bg-gray-50 font-sans hidden" id="main-content">
     <nav class="bg-blue-600 p-4 shadow-md mb-8">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
-            <div class="space-x-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+            <div class="mb-4 md:mb-0">
+                <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
+            </div>
+            <div class="flex flex-wrap justify-center gap-4">
                 <a href="dashboard.html" class="text-blue-100 hover:text-white transition">Dashboard</a>
                 <a href="kriteria.html" class="text-blue-100 hover:text-white transition">Kelola Kriteria</a>
                 <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded transition shadow">Logout</button>
@@ -96,6 +98,14 @@
         </div>
     </div>
 
+    <!-- Toast Notification -->
+    <div id="toast" class="fixed bottom-5 right-5 transform translate-y-20 opacity-0 transition-all duration-300 z-50 pointer-events-none">
+        <div class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3">
+            <span id="toast-icon" class="text-xl"></span>
+            <span id="toast-message" class="font-medium"></span>
+        </div>
+    </div>
+
     <script src="supabase_config.js"></script>
     <script>
         // Cek Login sederhana
@@ -164,14 +174,31 @@
                 msg += `Ekonomi: ${(weights[2]*100).toFixed(2)}%\n\n`;
                 msg += `Consistency Ratio (CR): ${CR.toFixed(4)}\n`;
                 msg += (CR <= 0.1) ? "👍 KONSISTEN" : "⚠️ TIDAK KONSISTEN (Cek kembali input)";
-                alert(msg);
-                window.location.href = 'kriteria.html';
+                
+                showToast('Bobot berhasil diupdate! Mengalihkan...', false);
+                setTimeout(() => {
+                    alert(msg);
+                    window.location.href = 'kriteria.html';
+                }, 1500);
             }
         });
 
         async function logout() { 
             localStorage.removeItem('session_admin');
             window.location.href = 'login.html'; 
+        }
+
+        // Fungsi Toast Notifikasi
+        function showToast(message, isError = false) {
+            const toast = document.getElementById('toast');
+            const msg = document.getElementById('toast-message');
+            const icon = document.getElementById('toast-icon');
+            const container = toast.querySelector('div');
+            msg.innerText = message;
+            icon.innerText = isError ? '❌' : '✅';
+            container.className = isError ? "bg-red-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3" : "bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3";
+            toast.classList.remove('translate-y-20', 'opacity-0');
+            setTimeout(() => toast.classList.add('translate-y-20', 'opacity-0'), 3000);
         }
     </script>
 </body>
