--- a/data_siswa.html
+++ b/data_siswa.html
@@ -10,9 +10,11 @@
 </head>
 <body class="bg-gray-50 font-sans hidden" id="main-content">
     <nav class="bg-blue-600 p-4 shadow-md mb-8">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
-            <div class="space-x-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+            <div class="mb-4 md:mb-0">
+                <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
+            </div>
+            <div class="flex flex-wrap justify-center gap-4">
                 <a href="dashboard.html" class="text-blue-100 hover:text-white transition">Dashboard</a>
                 <a href="kriteria.html" class="text-blue-100 hover:text-white transition">Kelola Kriteria</a>
                 <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded transition shadow">Logout</button>
@@ -73,7 +75,7 @@
             </form>
         </div>
 
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+        <div class="bg-white rounded-lg shadow-lg overflow-x-auto">
             <table class="min-w-full leading-normal">
                 <thead>
                     <tr class="bg-gray-100 text-gray-600 uppercase text-sm leading-normal">
@@ -85,6 +87,14 @@
                     <!-- Data akan dimuat di sini oleh JS -->
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <!-- Toast Notification -->
+    <div id="toast" class="fixed bottom-5 right-5 transform translate-y-20 opacity-0 transition-all duration-300 z-50 pointer-events-none">
+        <div class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3">
+            <span id="toast-icon" class="text-xl"></span>
+            <span id="toast-message" class="font-medium"></span>
         </div>
     </div>
 
@@ -106,7 +116,10 @@
                 .select('*')
                 .order('id_siswa', { ascending: false });
 
-            if (error) console.error('Error:', error);
+            if (error) {
+                console.error('Error:', error);
+                showToast('Gagal memuat data: ' + error.message, true);
+            }
 
             const tbody = document.getElementById('tabel-siswa');
             tbody.innerHTML = '';
@@ -156,10 +169,11 @@
                 error = err;
             }
 
-            if (error) alert('Gagal menyimpan: ' + error.message);
+            if (error) showToast('Gagal menyimpan: ' + error.message, true);
             else {
                 resetForm();
                 loadSiswa();
+                showToast(id ? 'Data berhasil diperbarui!' : 'Data berhasil disimpan!');
             }
         });
 
@@ -202,14 +216,32 @@
             // GANTI: Fetch Delete -> Supabase Delete
             const { error } = await supabase.from('siswa').delete().eq('id_siswa', id);
             
-            if (error) alert('Gagal hapus: ' + error.message);
-            loadSiswa();
+            if (error) showToast('Gagal hapus: ' + error.message, true);
+            else {
+                loadSiswa();
+                showToast('Data berhasil dihapus!');
+            }
         }
 
         // Logout sederhana
         async function logout() { 
             localStorage.removeItem('session_admin');
             window.location.href = 'login.html'; 
+        }
+
+        // Fungsi Toast Notifikasi
+        function showToast(message, isError = false) {
+            const toast = document.getElementById('toast');
+            const msg = document.getElementById('toast-message');
+            const icon = document.getElementById('toast-icon');
+            const container = toast.querySelector('div');
+
+            msg.innerText = message;
+            icon.innerText = isError ? '❌' : '✅';
+            container.className = isError ? "bg-red-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3" : "bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg flex items-center gap-3";
+
+            toast.classList.remove('translate-y-20', 'opacity-0');
+            setTimeout(() => toast.classList.add('translate-y-20', 'opacity-0'), 3000);
         }
     </script>
 </body>
