--- a/perhitungan.html
+++ b/perhitungan.html
@@ -14,9 +14,11 @@
 </head>
 <body class="bg-gray-50 font-sans hidden" id="main-content">
     <nav class="bg-blue-600 p-4 shadow-md mb-8">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
-            <div class="space-x-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+            <div class="mb-4 md:mb-0">
+                <a href="dashboard.html" class="text-white text-xl font-bold">SPK Beasiswa</a>
+            </div>
+            <div class="flex flex-wrap justify-center gap-4">
                 <a href="dashboard.html" class="text-blue-100 hover:text-white transition">Dashboard</a>
                 <a href="data_siswa.html" class="text-blue-100 hover:text-white transition">Kelola Data Siswa</a>
                 <a href="kriteria.html" class="text-blue-100 hover:text-white transition">Kelola Kriteria</a>
@@ -27,9 +29,9 @@
 
     <div class="container mx-auto p-6">
         <div class="bg-white rounded-lg shadow-lg p-8">
-            <div class="flex justify-between items-center mb-6">
-                <h2 class="text-2xl font-bold text-gray-800">Laporan Hasil Seleksi Beasiswa</h2>
-                <div class="space-x-2 no-print">
+            <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
+                <h2 class="text-2xl font-bold text-gray-800 text-center md:text-left">Laporan Hasil Seleksi Beasiswa</h2>
+                <div class="flex gap-2 no-print">
                     <button onclick="exportExcel()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 shadow">📊 Export Excel</button>
                     <button onclick="window.print()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 shadow">🖨️ Cetak PDF</button>
                 </div>
